@@ -1,6 +1,2 @@
 DIST ZRTPCPP-4.2.4.tar.gz 1924579 SHA256 976e24d9e0520fcce77c58c2e1a247988296c517fa980c5abf548f7cd6f06c8d SHA512 cf8ee70891b29b86f252e28f70d546ed150c7c0adcd69f8b3b7b4a6d773f1a6aa7d800fded6dfecb224e1682ea21d3edc8a57a64563b4ac2b300e2dddd594b4a WHIRLPOOL e6f14617a51d3d231a0c60ca12501fbff8256d7d9548a4eca23769efa75ceb86e1da0f7b1b97eaea9584ec175c0d5f596a0c6e001b8cf6ad4372708bd30110e0
-DIST libzrtpcpp-2.3.4.tar.gz 257234 SHA256 03e5d4de487fd154177cf2b7a45600b1c8df783136e4f01a9ebc6104b3771008 SHA512 fbadb826ae26b2729e10d64197c58d545e0e6e7bd9524775cbf4838d2ce3e6ae559932b5c20bb579a3e0cab33abd50251adf129e761cfdcf3fb25347e71ffc36 WHIRLPOOL 9bf31917100605f46242bdc6ab4fc4e7db79f445ceeb23c24b313eb1e010f42b848f1ccbeeedb21a3856cbf9ba1a56091b5e9b272d1c23559bca73ab659babcf
-EBUILD libzrtpcpp-2.3.4.ebuild 690 SHA256 1a39670e1af614642b5dda57f12623fd1e6befc2cf7f3c872ebd77a13c8dfc8c SHA512 b56627a17a5564d27e6ca3b401cfd34c8e585de79600564703e2fcb52d1501580905b6356cd855dec3a1832e40e539f6f69a966c621af5a6cd00edb4e0cc3c3c WHIRLPOOL 165ceb1462388ef228851ecb4ec3f4f53bb43b469005e03b31a4728a6ee82695deddf2e9f1e5fa47e8ae9552e03bf58f3facd7cff049827a26823d708c2631ff
-EBUILD libzrtpcpp-4.2.4.ebuild 958 SHA256 dc69fa7f41d95ebd76a85611352f946f864d3db91c42c74e7a74eda277b715f6 SHA512 288aaa205d8ada42b50fddac0ac8f3a3ad547c067ad289b39aff7a3fdecc44bb2452850096e153229b4bd8c86486e27aab4984188c787dec8dd9a585c19646ad WHIRLPOOL d166cef748e89aa8e1d9a3245a13174b0122b2c99cdeacc647009f73bc459803636f6e916a6fedef5b5db1ac86c482728d94343ceefec72429acc79105ae1945
-MISC ChangeLog 3578 SHA256 302205c700bfe414a009b48f7baef9447b4c686141698b92cb84bff9bc33f94c SHA512 b4112ea7a5e25d5d89ffa671630e39b79637cea827ea25e01f5a531a2150c8830c7a111e619223bd16f74cc6c6c6d69081cb48c0ec35f3e8cec32ad4e365b04e WHIRLPOOL f6f283c262179f312329c4569d25afdfb84f199f9e7e3c5aa367ce7f1720352e5e0c31d462295746c0679af36bca92211bbc5a4152743c0e5618673003b00736
-MISC metadata.xml 208 SHA256 98f8aa3fb70533eeab6b09d5bc30bd8f649ec13d9b04363490082fb87bb6032e SHA512 d5a7f3cb2fe57f8d7783ba358068648b122d9f5de81a17bff61ce600e42b6487e6f7e2a62c8be95cc7021cb3ea88716824b1ad0565da922ea753bea2417b3d3d WHIRLPOOL e38a6cdef2acb3efdc182efde482593790f773ab3bb9b66cced3af47e4ab39368757e17c4352c6cacaefa338341db88c3bcc3ffcd32aabd7984c5b19051a7bb7
+DIST libzrtpcpp-4.4.0.tar.gz 1933153 SHA256 93bb3b8dc497407d57a948f588509accd5caa1632439050d1c7b5d90c4f93691 SHA512 6f3365706c81c631bc8b1b7001085a811ade87ab34bbd35bdbc83e62ba7992430e98ce5cba6eeb88cb806490b71141d8028dc9c8e03305df7f75d59ccc8084c1 WHIRLPOOL 12e45d27867324a3ccebfb169ae6b1e6b98f6a765196d4e4767aba29661b0fa548b904eb8d846cb57db297b756b92f26d9da0a8484aee9bcd4d0083dddc17a1e
